Add nutrition provider mocks and computations

--- a/packages/nutrition_kit/pubspec.yaml
+++ b/packages/nutrition_kit/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  # Add package dependencies here.
+  core_kit:
+    path: ../core_kit
+  path: 1.9.0
 
 dev_dependencies:
-  # Add dev dependencies here.
+  test: 1.25.2
