--- a/packages/core_kit/pubspec.yaml
+++ b/packages/core_kit/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^3.0.7
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
