--- a/packages/app_widgets/pubspec.yaml
+++ b/packages/app_widgets/pubspec.yaml
@@ -5,9 +5,14 @@ publish_to: 'none'
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.10.0"
 
 dependencies:
-  # Add package dependencies here.
+  flutter:
+    sdk: flutter
+  meta: ^1.10.0
 
 dev_dependencies:
-  # Add dev dependencies here.
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^3.0.1
