Sostituisce asset binari con placeholder Base64

--- a/app/.env.sample
+++ b/app/.env.sample
@@ -1,5 +1,7 @@
-# Copy this file to .env and fill in the API keys required by the integrations.
-# Empty values disable the related services.
-OFF_API_KEY=
-FDC_API_KEY=
-EDAMAM_API_KEY=
+# Variabili d'ambiente di esempio per l'app Assistente Alimentare
+# Copia questo file in app/.env e sostituisci i valori con quelli reali.
+
+OFF_API_KEY=changeme_off
+FDC_API_KEY=changeme_fdc
+EDAMAM_API_KEY=changeme_edamam
+API_BASE_URL=https://api.example.com
