--- a/packages/core_kit/pubspec.yaml
+++ b/packages/core_kit/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
     sdk: flutter
   dio: ^5.3.2
   retry: ^3.1.0
+  drift: 2.15.0
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   uuid: ^3.0.7
   flutter_dotenv: ^5.1.0
 
@@ -22,7 +23,8 @@ dev_dependencies:
     sdk: flutter
 
   build_runner: ^2.4.7
+  drift_dev: 2.15.0
   freezed: ^2.4.7
-  json_serializable: ^6.7.1
+  json_serializable: ^6.8.0
   flutter_lints: ^3.0.1
 
