--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,30 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  core_kit:
+    path: packages/core_kit
+  nutrition_kit:
+    path: packages/nutrition_kit
+  recommender_kit:
+    path: packages/recommender_kit
+  data_kit:
+    path: packages/data_kit
+  meals_feature:
+    path: packages/features/meals
+  scanner_feature:
+    path: packages/features/scanner
+  shopping_feature:
+    path: packages/features/shopping
+  settings_feature:
+    path: packages/features/settings
   intl: 0.18.1
   go_router: 12.1.3
   flutter_riverpod: 2.5.1
   riverpod_annotation: 2.3.3
   drift: 2.15.0
-  drift_flutter: 2.15.0
-  sqlite3_flutter_libs: 0.5.15
+  sqlite3_flutter_libs: 0.5.24
   freezed_annotation: 2.4.1
-  json_annotation: 4.8.1
+  json_annotation: 4.9.0
   mobile_scanner: 4.0.0
   flutter_local_notifications: 16.3.2
   timezone: 0.9.2
@@ -34,11 +49,12 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  test: ^1.24.9
   build_runner: 2.4.7
   riverpod_generator: 2.3.8
   drift_dev: 2.15.0
   freezed: 2.4.7
-  json_serializable: 6.7.1
+  json_serializable: ^6.8.0
   flutter_lints: 3.0.1
   mocktail: 1.0.3
 
